# psfScope

./: .gitignore  README.md  borrar.csv  comparison_table.md  generate_test_beads.py  paper.bib  paper.md  postprocess_psf.py  psf_gui.py  pyproject.toml  statement_of_need.md
tests/: test_psf.py
