[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "psfscope"
version     = "0.1.0"
description = "Experimental PSF estimation and characterisation from sub-diffraction beads for oblique plane microscopy"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"

authors = [
    { name = "Francisco Joaquin Tassara" },
    { name = "Julian Gargiulo" },
]

keywords = [
    "microscopy", "PSF", "point spread function",
    "oblique plane microscopy", "OPM", "light sheet",
    "fluorescence", "deconvolution",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-image>=0.20",
    "tifffile>=2022.8",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]
theory = [
    "psfmodels>=0.3",
]

[project.scripts]
psfscope = "psf_gui:launch_gui"

[tool.setuptools.packages.find]
where   = ["."]
exclude = ["tests*", "__pycache__*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"
